--- a/environment.yml
+++ b/environment.yml
@@ -10,4 +10,4 @@ dependencies:
   - scikit-learn=0.23.*
   - pandas=1.1.*
   - seaborn=0.11.*
-  - sclblpy=0.1.*
+  # - sclblpy=0.1.* Not available on conda-forge as of 5 Nov 2020
