Clean up folder structure

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   },
   "scripts": {
     "start": "browser-sync start --server -w",
-    "deploy": "gh-pages -d '.'"
+    "deploy": "gh-pages -d './dist'"
   }
 }
